NN: Update CNN Colab Notebook with solutions - Also update .gitignore to include some unneeded directories
Signed-off-by: Gianmarco Scarano <gianmarcoscarano@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
+# Ignore the cached datasets
+LAB/data
+
+# Ignore the Notebook checkpoints
 LAB/.ipynb_checkpoints
+
+# Ignore the Homework folder for now
+Homeworks/
